test/Fail/IUnivNotFibrant.err
IUnivNotFibrant.agda:4.8-12: error: [ConstructorDoesNotFitInData]
Constructor Wrap.constructor
of sort SSet₁
does not fit into data type of sort Set₁.
(Reason: SSet₁ is not less or equal than Set₁)
when checking that the type IUniv of an argument to the constructor
Wrap.constructor fits in the sort Set₁ of the datatype.
